Commit to Codeup-Web-Exercises 111416 - DOM and BOM

--- a/defuse-the-bom.html
+++ b/defuse-the-bom.html
@@ -14,23 +14,28 @@
     "use strict";
 
     var detonationTimer = 5;
+    var interval = 1000;
 
     // TODO: This function needs to be called once every second
-    function updateTimer() {
-        if (detonationTimer == 0) {
+    var condition = setInterval(function updateTimer() {
+        if (detonationTimer <= 0) {
             alert('EXTERMINATE!');
             document.body.innerHTML = '';
+            clearInterval(condition);000
         } else if (detonationTimer > 0) {
             document.getElementById('timer').innerHTML = detonationTimer;
         }
 
         detonationTimer--;
-    }
+    }, interval);
 
     // TODO: When this function runs, it needs to
     // cancel the interval/timeout for updateTimer()
     function defuseTheBOM() {
-
+        if(detonationTimer > 0) {
+            clearInterval(condition);
+            alert("Congratulations! Disaster has been averted.")
+        }
     }
 
     // Don't modify anything below this line!
