--- a/calculator.html
+++ b/calculator.html
@@ -15,7 +15,7 @@
     </div>
 </div>
 <form name="calculator">
-    <div class="container-fixed col-md-3 col-md-offset-4 text-center">
+    <div class="container col-md-3 col-md-offset-4 text-center">
         <div class="row">
             <input id="left_Operand" type="text" class="form-control" placeholder="0" readonly>
             <input id="center_Operator" type="text" class="form-control" readonly>
@@ -40,7 +40,7 @@
             <input class="btn btn-info btn-lg" type="button" value="7">
             <input class="btn btn-info btn-lg" type="button" value="8">
             <input class="btn btn-info btn-lg" type="button" value="9">
-            <input class="btn btn-primary btn-lg" type="button" value="%">
+            <input class="btn btn-primary btn-lg" type="button" value="">
             <input class="btn btn-success btn-lg" type="button" value="=">
         </div>
         <div class="row">
