Commit to Codeup-Web-Exercises 112716 - Google Maps API exercises - working on JSON, continued

--- a/google_maps_api.html
+++ b/google_maps_api.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title>Google Maps API</title>
     <link rel="stylesheet" href="css/google_maps_api.css">
+    <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,700" rel="stylesheet">
 </head>
 <body>
-<h3>My favorite restaurants</h3>
+<h1 class="restHeader">My favorite restaurants</h1>
 <div id="map-canvas"></div>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA6QF_vEdSzxYly9t2UZSbUgPzvVuqeQ30"></script>
 <script src="js/google_maps_api.js"></script>
