--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -3,21 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>JQuery FAQ</title>
-    <style>
-        .invisible {
-            display: none;
-        }
-
-        .visible {
-            display: block;
-            padding: 10px;
-            background-color: #9e0315;
-            color: white;
-            margin: 1px;
-            border-radius: 2px 2px 0 0;
-            text-align: left;
-        }
-    </style>
+    <link rel="stylesheet" href="css/jquery_faq.css">
 </head>
 <body>
 <h1>Hawai'i Volcanoes National Park FAQ</h1>
@@ -27,25 +13,42 @@
     <dt>2. Which ones are extinct, dormant, or active?</dt>
     <dd class="invisible"><em>Kohala</em>, the oldest volcano on this island, last erupted about 60,000 years ago and is considered extinct.<br>
         <em>Mauna Kea</em> last erupted 3,600 years ago and is dormant.<br>
-        <em>Hualalai, Mauna Loa,</em> and <em>Kilauea</em> are active. Kilauea has been erupting continiously since 1983.</dd>
+        <em>Hualalai, Mauna Loa,</em> and <em>Kilauea</em> are active. Kilauea has been erupting continiously since 1983.<br><img
+                src="img/Hawaii_Big_Island_Volcanoes_by_Land_Area_Map.jpg" height="606" width="720"/></dd>
     <dt>3. How much lava does Kilauea erupt on a daily basis?</dt>
-    <dd class="invisible">The current eruption rate is 250,000-650,000 cubic yards per day. That is enough to resurface a 20-mile-long two-lane road every day.</dd>
+    <dd class="invisible">The current eruption rate is 250,000-650,000 cubic yards per day. That is enough to resurface a 20-mile-long two-lane road every day.<br><img
+            src="img/Kilauea_Iki_1959.jpg" height="500" width="800"/></dd>
     <dt>4. Where does all of that lava go?</dt>
     <dd class="invisible">Most of the lava is transported by lava tubes to the ocean, where it fragments, and adds layers of rubble to the submarine flank of the volcano. Some does break the surface, where it can be destructive, depending on which way it flows.</dd>
     <dt>5. How many homes/buildings have been destroyed in the current eruption?</dt>
     <dd class="invisible">To date, 181 homes, the Wahaula visitors center, the Royal Gardens Community Center, the Mauna Kea Congregational Church, and the Kalapana Drive-in have been destroyed.</dd>
     <a href="#" id="open-invisible">Click to toggle the answers.</a>
 </dl>
+<div id="otherVolcanoes">
+    <h3 class="close-invisible">Mount Rainier National Park</h3>
+    <ul>
+        <li>The park was established on March 2, 1899.</li>
+        <li>It encompasses 369.35 square miles within its legislative boundaries.</li>
+        <li>One-to-two million people visit Mount Rainier each year.</li>
+        <li>The volcano is considered "episodically active," meaning that it will erupt again sometime in the future, despite being quiet now.</li>
+    </ul>
+    <h3 class="close-invisible">Yellowstone National Park</h3>
+    <ul>
+        <li>The park was established on March 2, 1872.</li>
+        <li>It encompasses 3,472 square miles within its legislative boundaries.</li>
+        <li>Four million people visit Mount Rainier each year.</li>
+        <li>The volcano is considered active, with major eruptions about every 70,000 years.</li>
+    </ul>
+    <h3 class="close-invisible">Mount St. Helens</h3>
+    <ul>
+        <li>Part of the Gifford Pinchot National Forest.</li>
+        <li>On the morning of May 18, 1980, after weeks of small tremors, a magnitude 5.1 earthquake shook beneath Mount St. Helens and triggered an enormous eruption.</li>
+        <li>The eruption involved a complex series of events that unfolded over the next 12 hours, with many events going on simultaneously.</li>
+        <li>These volcanic events buried some areas in debris avalanches and mudflows, scoured other areas with hot gases, blew down or scorched forests on slopes several miles away, and dusted forests farther away with volcanic ash.</li>
+    </ul>
+</div>
 </body>
-<script src="js/jquery-2.2.4.js"></script>
-<script>
-    "use strict";
-
-    $(document).ready(function () {
-        $('#open-invisible').click(function (event) {
-            event.preventDefault();
-            $('.invisible').toggleClass('visible');
-        });
-    });
+<script src="js/jquery-2.2.4.js" type="text/javascript"></script>
+<script src="js/jquery_faq.js" type="text/javascript">
 </script>
 </html>
