Commit to Codeup-Web-Exercises 120216 - AJAX blog

--- a/github-api.html
+++ b/github-api.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-<script src="js/repos.json"></script>
+<script src="data/repos.json"></script>
 </head>
 <body>
 
