--- a/ajax_blog.html
+++ b/ajax_blog.html
@@ -7,10 +7,20 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Exo+2:400,900" rel="stylesheet">
+    <link rel="stylesheet" href="css/ajax_blog.css">
 </head>
 <body>
-<div id="posts"></div>
+<div class="jumbotron">
+    <div class="container">
+        <img src="img/Tech_blog_header.png" class="img-responsive" height="220" width="960"/>
+    </div>
+</div>
+
+<div id="posts" class="container"></div>
+
 <a id="reload" class="btn btn-primary">Reload</a>
+
 </body>
 <script src="ajax_blog.js"></script>
 </html>
