--- a/weather_map.html
+++ b/weather_map.html
@@ -9,12 +9,18 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Exo+2:400,900" rel="stylesheet">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA6QF_vEdSzxYly9t2UZSbUgPzvVuqeQ30"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.js"></script>
     <link rel="stylesheet" href="css/weather_map.css">
 </head>
 <body>
 <div id="weather-container" class="container">
     <h2>Weather application</h2>
-    <div id="current-city"></div>
+    <div class="row">
+        <div id="current-city" class="col-xs-3"></div>
+            <form id="new-coordinates" class="col-xs-3">
+                <input type="text" value="getLat(data)">
+            </form>
+    </div>
     <div id="weather-report" class="row">
         <!-- This is where I will programmatically send weather data. -->
     </div>
