--- a/weather_map.html
+++ b/weather_map.html
@@ -16,10 +16,10 @@
 <div id="weather-container" class="container">
     <h2>Weather application</h2>
     <div class="row">
-        <div id="current-city" class="col-xs-3"></div>
-            <form id="new-coordinates" class="col-xs-3">
-                <input type="text" value="getLat(data)">
-            </form>
+        <div id="current-city" class="col-sm-6"></div>
+        <div id="enter-coordinates" class="col-sm-6">
+                Latitude: <input type="text" id="latitude" value="">Longitude: <input type="text" id="longitude" value=""><button id="new-coordinates">Set new coordinates</button>
+        </div>
     </div>
     <div id="weather-report" class="row">
         <!-- This is where I will programmatically send weather data. -->
