--- a/weather_map.html
+++ b/weather_map.html
@@ -12,15 +12,17 @@
     <link rel="stylesheet" href="css/weather_map.css">
 </head>
 <body>
+<div class="container">
+
 <div id="weather-container" class="container">
     <h2>Weather application</h2>
     <div class="row">
-        <div id="current-city" class="col-sm-3"></div>
+        <div id="current-city" class="col-md-4"></div>
         <!--<div id="enter-coordinates" class="col-sm-6">-->
                 <!--Latitude: <input type="text" id="latitude" value="">Longitude: <input type="text" id="longitude" value=""><button id="new-coordinates">Set new coordinates</button>-->
         <!--</div>-->
     </div>
-    <div id="weather-report" class="row">
+    <div id="weather-report" class="table">
         <!-- This is where I will programmatically send weather data. -->
     </div>
 </div>
